[package]
name = "private-cfmm-attack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-addressbook = { git = "https://github.com/Rjected/ethers-rs", branch = "contract-traits" }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
